--- a/extra-tests/classes/RollupCalcItemReplacerTests.cls
+++ b/extra-tests/classes/RollupCalcItemReplacerTests.cls
@@ -70,4 +70,56 @@ private class RollupCalcItemReplacerTests {
 
     System.assertEquals(opp.Amount, oppConRole.Opportunity.Amount, 'Should not fail due to Relationship not editable error');
   }
+
+  @IsTest
+  static void shouldNotQueryRelationshipFieldsFromAnotherObject() {
+    Account parentAccount = [SELECT Id FROM Account];
+    Account acc = new Account(ParentId = parentAccount.Id, Name = 'Child account');
+    Opportunity opp = new Opportunity(CloseDate = System.today(), StageName = 'test non reparent', Name = 'opp', Amount = 5);
+    Contact con = new Contact(LastName = 'Con');
+    insert new List<SObject>{ opp, con, acc };
+
+    OpportunityContactRole oppConRole = new OpportunityContactRole(OpportunityId = opp.Id, ContactId = con.Id);
+    insert oppConRole;
+
+    RollupCalcItemReplacer replacer = new RollupCalcItemReplacer(
+      new RollupControl__mdt(IsRollupLoggingEnabled__c = true, ReplaceCalcItemsAsyncWhenOverCount__c = 1)
+    );
+    replacer.replace(
+      new List<OpportunityContactRole>{ oppConRole },
+      new List<Rollup__mdt>{ new Rollup__mdt(CalcItemWhereClause__c = 'Opportunity.Amount = 1')}
+    );
+
+    // now call replace on another object without the field used above
+    List<Account> accounts = replacer.replace(
+      new List<Account>{ acc },
+      new List<Rollup__mdt>{ new Rollup__mdt(CalcItemWhereClause__c = 'Parent.Name = \'someName\'') }
+    );
+
+    System.assertNotEquals(null, accounts[0].Parent.Name, 'Should be able to access parent field after re-querying for it');
+  }
+
+  @IsTest
+  static void shouldRetrieveQueryFieldsPartOfOrderBy() {
+    Rollup.defaultControl = new RollupControl__mdt(ShouldAbortRun__c = true);
+    Account acc = [SELECT Id, Name FROM Account];
+
+    Contact con = new Contact(LastName = 'Ordered by Account Name', AccountId = acc.Id);
+    insert con;
+    con = [SELECT Id, LastName, Account.Id FROM Contact];
+
+    RollupCalcItemReplacer replacer = new RollupCalcItemReplacer(
+      new RollupControl__mdt(IsRollupLoggingEnabled__c = true, ReplaceCalcItemsAsyncWhenOverCount__c = 1)
+    );
+    Rollup__mdt meta = Rollup.appendOrderByMetadata(new Rollup__mdt(), new List<RollupOrderBy__mdt>{
+      new RollupOrderBy__mdt(FieldName__c = 'Account.Name')
+    });
+
+    List<Contact> replacedContacts = replacer.replace(
+      new List<Contact>{ con },
+      new List<Rollup__mdt>{ meta }
+    );
+
+    System.assertNotEquals(null, replacedContacts[0].Account.Name);
+  }
 }
