--- a/extra-tests/classes/RollupFirstLastSorterTests.cls
+++ b/extra-tests/classes/RollupFirstLastSorterTests.cls
@@ -1,7 +1,7 @@
 @IsTest
 private class RollupFirstLastSorterTests {
   @IsTest
-  static void shouldOrderByTwoFields() {
+  static void shouldOrderByTwoFieldsFirst() {
     RollupFirstLastSorter sorter = new RollupFirstLastSorter(
       Rollup.Op.FIRST,
       new List<RollupOrderBy__mdt>{
@@ -17,6 +17,31 @@ private class RollupFirstLastSorterTests {
       new Opportunity(Amount = 1, CloseDate = System.today()),
       // this record should essentially be thrown out of sorting since it "loses" on the first ordering,
       // which is on Amount
+      new Opportunity(Amount = 3, CloseDate = severalDaysAgo.addDays(-1)),
+      expectedSecondItem,
+      expectedFirstItem
+    };
+    sorter.sort(oppsToSort);
+
+    System.assertEquals(expectedFirstItem, oppsToSort[0]);
+    System.assertEquals(expectedSecondItem, oppsToSort[1]);
+  }
+
+  @IsTest
+  static void shouldOrderByTwoFieldsLast() {
+    RollupFirstLastSorter sorter = new RollupFirstLastSorter(
+      Rollup.Op.LAST,
+      new List<RollupOrderBy__mdt>{
+        new RollupOrderBy__mdt(Ranking__c = 0, FieldName__c = 'Amount'),
+        new RollupOrderBy__mdt(Ranking__c = 1, FieldName__c = 'CloseDate')
+      }
+    );
+
+    Date severalDaysAgo = System.today().addDays(-2);
+    Opportunity expectedFirstItem = new Opportunity(Amount = 6, CloseDate = severalDaysAgo);
+    Opportunity expectedSecondItem = new Opportunity(Amount = 4, CloseDate = severalDaysAgo);
+    List<Opportunity> oppsToSort = new List<Opportunity>{
+      new Opportunity(Amount = 1, CloseDate = System.today()),
       new Opportunity(Amount = 3, CloseDate = severalDaysAgo.addDays(-1)),
       expectedSecondItem,
       expectedFirstItem
