Updating hashCode implementation to properly override for RollupRecursionItem

--- a/rollup/core/classes/RollupRecursionItem.cls
+++ b/rollup/core/classes/RollupRecursionItem.cls
@@ -45,7 +45,7 @@ public without sharing class RollupRecursionItem {
     return false;
   }
 
-  public Integer hashCode() {
+  public override Integer hashCode() {
     return this.hasher.get();
   }
 
